--- a/templates/search.html
+++ b/templates/search.html
@@ -13,6 +13,7 @@
                 <input type="hidden" name="event_name" value="{{e['name']}}"/>
                 <input type="hidden" name="event_date" value="{{e['dates']['start']['localDate']}}"/>
                 <input type="hidden" name="event_time_from" value="{{e['dates']['start']['localTime']}}"/>
+                <input type="hidden" name="event_time_tba" value="{{e['dates']['start']['timeTBA']}}"/>
                 <button type="submit">add event to your calendar</button>
             </form>
     
